kermeta_projects/fr.irisa.triskell.kermeta.io/test/typechecher_tests/valid/Enum.kmt
package testEnum;

require kermeta

using kermeta::standard

enumeration Couleur {
	jaune;
	bleu;
	vert;
	rouge;
}

enumeration Jour {
	lundi;
	mardi;
	mercredi;
	jeudi;
}


class Test {

	attribute color : Couleur
	
	attribute colors : Couleur[*]
	
	
	operation test1() : Couleur is
	do
		result := Couleur.jaune
	end
	
	operation test2() is do
		var o : Object
		o := Jour.lundi
	end
	
	operation test3() is do
		var c : Couleur
		c := Couleur.jaune
		c := c
	end
	
	operation test4() : Set<Couleur> is do
		result := Set<Couleur>.new
        colors.each{ col | 
        	result.add(col)
        	color := col
        }
	end

	operation test5() is do
		var o : Object
		o := Couleur.jaune
		color ?= o
	end
   
}

